# Poputka-archived

./: README.md  setup.cfg
backend/rides/: pyproject.toml
backend/rides/migrations/: env.py
backend/rides/src/: config.py  database.py  main.py
backend/rides/src/rides/: models.py
backend/rides/src/rides/schemas/: rides.py  users.py
backend/users/: pyproject.toml
backend/users/migrations/: env.py
backend/users/src/: config.py  database.py  main.py
backend/users/src/auth/: auth_config.py  manager.py  models.py  schemas.py  utils.py
docs/: models.md  specifications.md
infra/: docker-compose.yml
rides/: pyproject.toml
